override styles being applied to button from bootstrap. all nav links/buttons now align correctly

--- a/src/components/layout/nav/Nav.css
+++ b/src/components/layout/nav/Nav.css
@@ -31,6 +31,11 @@
     float: right;
 }
 
+.logout-button {
+    border-radius: 0;
+    border-width: 0;
+}
+
 @media only screen and (max-width: 900px) {
     .header-lead {
         font-size: 1.25rem;
